unpackaged/main/default/objects/Tenant__c/fields/Account_Created_Time_Stamp__c.field-meta.xml
<CustomField>
    <fullName>Account_Created_Time_Stamp__c</fullName>
    <label>Account Created Time Stamp</label>
    <type>DateTime</type>
</CustomField>