unpackaged/main/default/objects/Tenant__c/fields/Account_Tier_Plan__c.field-meta.xml
<CustomField>
    <fullName>Account_Tier_Plan__c</fullName>
    <description>Needed for Pendo Integration - SF Case # 00166455</description>
    <formula>TEXT (Account__r.Tier_Plan__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Pendo Integration Field</inlineHelpText>
    <label>Account Tier Plan</label>
    <type>Text</type>
</CustomField>