unpackaged/main/default/objects/Tenant__c/fields/Brokerage_Name__c.field-meta.xml
<CustomField>
    <fullName>Brokerage_Name__c</fullName>
    <formula>Account__r.Brokerage__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Brokerage Name</label>
    <type>Text</type>
</CustomField>