unpackaged/main/default/objects/Tenant__c/fields/calendlyEventTime__c.field-meta.xml
<CustomField>
    <fullName>calendlyEventTime__c</fullName>
    <label>calendlyEventTime</label>
    <type>DateTime</type>
</CustomField>