unpackaged/main/default/objects/Tenant__c/fields/Current_Business_Size__c.field-meta.xml
<CustomField>
    <fullName>Current_Business_Size__c</fullName>
    <formula>Account__r.AnnualRevenue</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Current Business Size</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>