unpackaged/main/default/objects/Tenant__c/fields/Current_CSM__c.field-meta.xml
<CustomField>
    <fullName>Current_CSM__c</fullName>
    <description>Needed for Pendo Integration - SF Case # 00166455</description>
    <formula>Account__r.Account_Manager__r.FirstName + &quot; &quot; +  Account__r.Account_Manager__r.LastName</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Pendo Integration Field</inlineHelpText>
    <label>Current CSM</label>
    <type>Text</type>
</CustomField>