unpackaged/main/default/objects/Tenant__c/fields/Current_Website_Url__c.field-meta.xml
<CustomField>
    <fullName>Current_Website_Url__c</fullName>
    <formula>HYPERLINK( Account__r.Website_Domain__c, Account__r.Website_Domain__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Current Website Url</label>
    <type>Text</type>
</CustomField>