unpackaged/main/default/objects/Tenant__c/fields/DCSM_Engaged__c.field-meta.xml
<CustomField>
    <fullName>DCSM_Engaged__c</fullName>
    <formula>Account__r.DCSM_Engaged__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>DCSM Engaged</label>
    <type>Checkbox</type>
</CustomField>