unpackaged/main/default/objects/Tenant__c/fields/IAO_Contact__c.field-meta.xml
<CustomField>
    <fullName>IAO_Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>IAO Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Tenants</relationshipLabel>
    <relationshipName>Tenants</relationshipName>
    <type>Lookup</type>
</CustomField>