unpackaged/main/default/objects/Tenant__c/fields/Invitation_Accepted_Time_Stamp__c.field-meta.xml
<CustomField>
    <fullName>Invitation_Accepted_Time_Stamp__c</fullName>
    <label>Invitation Accepted Time Stamp</label>
    <type>DateTime</type>
</CustomField>