unpackaged/main/default/objects/Tenant__c/fields/Last_Integration_Sync__c.field-meta.xml
<CustomField>
    <fullName>Last_Integration_Sync__c</fullName>
    <label>Last Integration Sync</label>
    <type>DateTime</type>
</CustomField>