unpackaged/main/default/objects/Tenant__c/fields/Link_to_instance__c.field-meta.xml
<CustomField>
    <fullName>Link_to_instance__c</fullName>
    <label>Link to instance</label>
    <type>Url</type>
</CustomField>