unpackaged/main/default/objects/Tenant__c/fields/Link_to_Instance_url__c.field-meta.xml
<CustomField>
    <fullName>Link_to_Instance_url__c</fullName>
    <formula>HYPERLINK(&quot;https://app.luxurypresence.com/admin/accounts/&quot;&amp;Provider_ID_Unique__c , &quot;Go to Presence Account&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Link to Instance</label>
    <type>Text</type>
</CustomField>