unpackaged/main/default/objects/Tenant__c/fields/onb_mod_1_completed_at__c.field-meta.xml
<CustomField>
    <fullName>onb_mod_1_completed_at__c</fullName>
    <label>IAO Module 1 Completed</label>
    <type>DateTime</type>
</CustomField>