unpackaged/main/default/objects/Tenant__c/fields/Onboarding_Complete_Time_Stamp__c.field-meta.xml
<CustomField>
    <fullName>Onboarding_Complete_Time_Stamp__c</fullName>
    <label>Onboarding Complete Time Stamp</label>
    <type>DateTime</type>
</CustomField>