unpackaged/main/default/objects/Tenant__c/fields/Primary_Contact_Last_Name__c.field-meta.xml
<CustomField>
    <fullName>Primary_Contact_Last_Name__c</fullName>
    <formula>Account__r.Contact__r.LastName</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Primary Contact Last Name</label>
    <type>Text</type>
</CustomField>