unpackaged/main/default/objects/Tenant__c/fields/Provider_ID_Unique__c.field-meta.xml
<CustomField>
    <fullName>Provider_ID_Unique__c</fullName>
    <caseSensitive>true</caseSensitive>
    <label>Provider ID</label>
    <length>255</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>