unpackaged/main/default/objects/Tenant__c/fields/TTV_Beta__c.field-meta.xml
<CustomField>
    <fullName>TTV_Beta__c</fullName>
    <label>TTV Beta</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>