unpackaged/main/default/objects/Tenant__c/recordTypes/Presence_Company.recordType-meta.xml
<RecordType>
    <fullName>Presence_Company</fullName>
    <active>true</active>
    <label>Presence Company</label>
</RecordType>