unpackaged/main/default/objects/Tenant__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Provider_ID_Unique__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>